--- a/.github/workflows/notepad2.yml
+++ b/.github/workflows/notepad2.yml
@@ -86,6 +86,7 @@ jobs:
           cmake --build cmake-build --parallel --verbose
           mkdir bin
           copy cmake-build\notepad2.exe bin\
+          copy cmake-build\metapath.exe bin\
           cd ..
           
       - name: copy libmmd.dll
@@ -125,9 +126,6 @@ jobs:
             cxx: g++
             cmake_prefix_path: /mingw64
             stdlib: /mingw64/bin/libstdc++-6.dll
-    env:
-      targetName: notepad2
-      
     steps:
       - uses: msys2/setup-msys2@v2
         with:
@@ -156,6 +154,7 @@ jobs:
           env MSYSTEM=${{ matrix.mingw_arch }} PATH=/${{ matrix.mingw_arch }}/bin:/usr/bin:$PATH cmake --build ${{ matrix.mingw_prefix }}-build --parallel --verbose
           mkdir bin
           env MSYSTEM=${{ matrix.mingw_arch }} PATH=/${{ matrix.mingw_arch }}/bin:/usr/bin:$PATH cp ${{ matrix.mingw_prefix }}-build/notepad2.exe bin/
+          env MSYSTEM=${{ matrix.mingw_arch }} PATH=/${{ matrix.mingw_arch }}/bin:/usr/bin:$PATH cp ${{ matrix.mingw_prefix }}-build/metapath.exe bin/
           env MSYSTEM=${{ matrix.mingw_arch }} PATH=/${{ matrix.mingw_arch }}/bin:/usr/bin:$PATH cp ${{ matrix.stdlib }} bin/
           
       - name: upload executable artifact
