--- a/.github/workflows/notepad2.yml
+++ b/.github/workflows/notepad2.yml
@@ -12,11 +12,14 @@ on:
       - 'notepad2/**'
       
 env:
-  WINDOWS_BASEKIT_URL: https:/registrationcenter-download.intel.com/akdlm/IRC_NAS/c961e083-5685-4f0b-ada5-c6cf16f561dd/w_BaseKit_p_2023.1.0.47256_offline.exe
-  WINDOWS_HPCKIT_URL: https:/registrationcenter-download.intel.com/akdlm/IRC_NAS/2a13d966-fcc5-4a66-9fcc-50603820e0c9/w_HPCKit_p_2023.1.0.46357_offline.exe
+  WINDOWS_BASEKIT_URL: https://registrationcenter-download.intel.com/akdlm/IRC_NAS/f96c71db-2c6c-45d9-8c1f-0348ef5885cf/w_BaseKit_p_2023.2.0.49396_offline.exe
+  WINDOWS_HPCKIT_URL: https://registrationcenter-download.intel.com/akdlm/IRC_NAS/438527fc-7140-422c-a851-389f2791816b/w_HPCKit_p_2023.2.0.49441_offline.exe
   WINDOWS_CPP_COMPONENTS: intel.oneapi.win.cpp-compiler
   WINDOWS_DPCPP_COMPONENTS: intel.oneapi.win.dpcpp-compiler
-  COMPILER_VERSION: 2023.1.0
+  SAMPLES_TAG: 2023.2.0
+  COMPILER_VERSION: 2023.2.0
+  TBB_VERSION: 2021.10.0
+  VS_VER: vs2022
             
 jobs:
   notepad2-nightly-msvc:
@@ -138,6 +141,18 @@ jobs:
           ref: ${{ github.head_ref }}
           fetch-depth: 1
           submodules: true
+                    
+      - name: Build mingwdeployqt
+        shell: msys2 {0}
+        run: |
+          git clone https://github.com/missdeer/mingwdeployqt.git
+          cd mingwdeployqt
+          mkdir build
+          cd build
+          env PATH=$PATH:/${{ matrix.mingw_arch }}/bin cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=${{ matrix.c }} -DCMAKE_CXX_COMPILER=${{ matrix.cxx }} -G Ninja ..
+          ninja
+          cp mingwdeployqt.exe /${{ matrix.mingw_arch }}/bin/
+          cd ../..
           
       - name: prepare
         shell: cmd
@@ -155,7 +170,8 @@ jobs:
           mkdir bin
           env MSYSTEM=${{ matrix.mingw_arch }} PATH=/${{ matrix.mingw_arch }}/bin:/usr/bin:$PATH cp ${{ matrix.mingw_prefix }}-build/notepad2.exe bin/
           env MSYSTEM=${{ matrix.mingw_arch }} PATH=/${{ matrix.mingw_arch }}/bin:/usr/bin:$PATH cp ${{ matrix.mingw_prefix }}-build/metapath.exe bin/
-          env MSYSTEM=${{ matrix.mingw_arch }} PATH=/${{ matrix.mingw_arch }}/bin:/usr/bin:$PATH cp ${{ matrix.stdlib }} bin/
+          env MSYSTEM=${{ matrix.mingw_arch }} PATH=$PATH:/${{ matrix.mingw_arch }}/bin /${{ matrix.mingw_arch }}/bin/mingwdeployqt.exe bin/notepad2.exe
+          env MSYSTEM=${{ matrix.mingw_arch }} PATH=$PATH:/${{ matrix.mingw_arch }}/bin /${{ matrix.mingw_arch }}/bin/mingwdeployqt.exe bin/metapath.exe
           
       - name: upload executable artifact
         uses: actions/upload-artifact@v1
