fix linker flags

--- a/notepad2/CMakeLists.txt
+++ b/notepad2/CMakeLists.txt
@@ -70,9 +70,9 @@ file(GLOB
         scintilla/win32/*.cxx
         )
 
-if ("${CMAKE_CXX_SIMULATE_ID}" STREQUAL "MSVC")
-set (CMAKE_EXE_LINKER_FLAGS /MANIFEST:NO )
-endif ("${CMAKE_CXX_SIMULATE_ID}" STREQUAL "MSVC")
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /MANIFEST:NO")
+endif()
 add_executable(${PROJECT_NAME} ${EditLexers} ${src} ${lexlib} ${lexers} ${scintilla} ${win32} src/Notepad2.rc)
 target_link_libraries(${PROJECT_NAME} PRIVATE comctl32 shlwapi imm32 uxtheme)
 set_target_properties(${PROJECT_NAME} PROPERTIES WIN32_EXECUTABLE ON)
