--- a/notepad2/CMakeLists.txt
+++ b/notepad2/CMakeLists.txt
@@ -13,12 +13,10 @@ if(NOT NOAVX2 AND NOT CMAKE_BUILD_TYPE MATCHES Debug)
     if(CMAKE_SYSTEM_PROCESSOR STREQUAL "AMD64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "amd64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
         if( ${CMAKE_CXX_COMPILER_ID} STREQUAL "IntelLLVM")
             add_compile_options("/QxCORE-AVX2" "-O3" "-mavx2")
-        elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
-            add_compile_options("-mavx2" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe")
-        elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
-            add_compile_options("-mavx2" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe")
-        else()
+        elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC" OR "${CMAKE_CXX_SIMULATE_ID}" STREQUAL "MSVC")
             add_compile_options("/Ot" "/fp:fast" "/Gv" "/O2" "/arch:AVX2")
+        else()
+            add_compile_options("-mavx2" "-mpopcnt" "-mbmi" "-mbmi2" "-mlzcnt" "-mmovbe")
         endif()
     endif()
 endif()
