--- a/.github/workflows/clang-for-windows.yml
+++ b/.github/workflows/clang-for-windows.yml
@@ -1,7 +1,7 @@
 name: Clang for Windows
 on: 
   schedule:
-    - cron:  '0 18 * * *'
+    - cron:  '0 18 3 * *'
   push:
     paths:
       - '.github/workflows/clang-for-windows.yml'
@@ -15,7 +15,7 @@ jobs:
       matrix:
         include:
           - msvc_arch: x64
-            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-16.0.6/LLVM-16.0.6-win64.exe
+            clang_link: https://github.com/llvm/llvm-project/releases/download/llvmorg-17.0.2/LLVM-17.0.2-win64.exe
             compiler: clang-cl
     env:
       targetName: llvm-win-${{ matrix.msvc_arch }}
