--- a/.github/workflows/cidr.yml
+++ b/.github/workflows/cidr.yml
@@ -9,7 +9,6 @@ on:
     paths:
       - '.github/workflows/cidr.yml'
 
-      
 jobs:
   route:
     runs-on: ubuntu-latest
@@ -23,61 +22,36 @@ jobs:
           find . -name 'GeoLite2-Country-CSV_*' -type d | while read dir; do mv $dir "GeoLite2-Country-CSV"; done
           cd GeoLite2-Country-CSV
           curl -o cn_cidr.txt -L https://cdn.jsdelivr.net/gh/17mon/china_ip_list@master/china_ip_list.txt
-          n=`grep -r -a ',IT,' GeoLite2-Country-Locations-zh-CN.csv | awk -F ',' '{print $1}'`
-          cat GeoLite2-Country-Blocks-IPv4.csv | awk -F ',' '{ $3=null;print $0}' | grep "$n" | awk -F ' ' '{print $1}' > it_cidr.txt
-          n=`grep -r -a ',US,' GeoLite2-Country-Locations-zh-CN.csv | awk -F ',' '{print $1}'`
-          cat GeoLite2-Country-Blocks-IPv4.csv | awk -F ',' '{ $3=null;print $0}' | grep "$n" | awk -F ' ' '{print $1}' > us_cidr.txt
-          n=`grep -r -a ',JP,' GeoLite2-Country-Locations-zh-CN.csv | awk -F ',' '{print $1}'`
-          cat GeoLite2-Country-Blocks-IPv4.csv | awk -F ',' '{ $3=null;print $0}' | grep "$n" | awk -F ' ' '{print $1}' > jp_cidr.txt
-          n=`grep -r -a ',TW,' GeoLite2-Country-Locations-zh-CN.csv | awk -F ',' '{print $1}'`
-          cat GeoLite2-Country-Blocks-IPv4.csv | awk -F ',' '{ $3=null;print $0}' | grep "$n" | awk -F ' ' '{print $1}' > tw_cidr.txt
-          n=`grep -r -a ',HK,' GeoLite2-Country-Locations-zh-CN.csv | awk -F ',' '{print $1}'`
-          cat GeoLite2-Country-Blocks-IPv4.csv | awk -F ',' '{ $3=null;print $0}' | grep "$n" | awk -F ' ' '{print $1}' > hk_cidr.txt
-          n=`grep -r -a ',SG,' GeoLite2-Country-Locations-zh-CN.csv | awk -F ',' '{print $1}'`
-          cat GeoLite2-Country-Blocks-IPv4.csv | awk -F ',' '{ $3=null;print $0}' | grep "$n" | awk -F ' ' '{print $1}' > sg_cidr.txt
-          n=`grep -r -a ',KR,' GeoLite2-Country-Locations-zh-CN.csv | awk -F ',' '{print $1}'`
-          cat GeoLite2-Country-Blocks-IPv4.csv | awk -F ',' '{ $3=null;print $0}' | grep "$n" | awk -F ' ' '{print $1}' > kr_cidr.txt
-          n=`grep -r -a ',RU,' GeoLite2-Country-Locations-zh-CN.csv | awk -F ',' '{print $1}'`
-          cat GeoLite2-Country-Blocks-IPv4.csv | awk -F ',' '{ $3=null;print $0}' | grep "$n" | awk -F ' ' '{print $1}' > ru_cidr.txt
-          n=`grep -r -a ',GB,' GeoLite2-Country-Locations-zh-CN.csv | awk -F ',' '{print $1}'`
-          cat GeoLite2-Country-Blocks-IPv4.csv | awk -F ',' '{ $3=null;print $0}' | grep "$n" | awk -F ' ' '{print $1}' > gb_cidr.txt
-          n=`grep -r -a ',FR,' GeoLite2-Country-Locations-zh-CN.csv | awk -F ',' '{print $1}'`
-          cat GeoLite2-Country-Blocks-IPv4.csv | awk -F ',' '{ $3=null;print $0}' | grep "$n" | awk -F ' ' '{print $1}' > fr_cidr.txt
-          n=`grep -r -a ',DE,' GeoLite2-Country-Locations-zh-CN.csv | awk -F ',' '{print $1}'`
-          cat GeoLite2-Country-Blocks-IPv4.csv | awk -F ',' '{ $3=null;print $0}' | grep "$n" | awk -F ' ' '{print $1}' > de_cidr.txt
-          n=`grep -r -a ',SE,' GeoLite2-Country-Locations-zh-CN.csv | awk -F ',' '{print $1}'`
-          cat GeoLite2-Country-Blocks-IPv4.csv | awk -F ',' '{ $3=null;print $0}' | grep "$n" | awk -F ' ' '{print $1}' > se_cidr.txt
-          n=`grep -r -a ',ES,' GeoLite2-Country-Locations-zh-CN.csv | awk -F ',' '{print $1}'`
-          cat GeoLite2-Country-Blocks-IPv4.csv | awk -F ',' '{ $3=null;print $0}' | grep "$n" | awk -F ' ' '{print $1}' > es_cidr.txt
-          n=`grep -r -a ',NL,' GeoLite2-Country-Locations-zh-CN.csv | awk -F ',' '{print $1}'`
-          cat GeoLite2-Country-Blocks-IPv4.csv | awk -F ',' '{ $3=null;print $0}' | grep "$n" | awk -F ' ' '{print $1}' > nl_cidr.txt
-          n=`grep -r -a ',AS,' GeoLite2-Country-Locations-zh-CN.csv | awk -F ',' '{print $1}'`
-          cat GeoLite2-Country-Blocks-IPv4.csv | awk -F ',' '{ $3=null;print $0}' | grep "$n" | awk -F ' ' '{print $1}' > as_cidr.txt
-          cat cn_cidr.txt | while read ip; do sed -i "\|$ip|d" as_cidr.txt; done
-          cat jp_cidr.txt | while read ip; do sed -i "\|$ip|d" as_cidr.txt; done
-          cat tw_cidr.txt | while read ip; do sed -i "\|$ip|d" as_cidr.txt; done
-          cat hk_cidr.txt | while read ip; do sed -i "\|$ip|d" as_cidr.txt; done
-          cat kr_cidr.txt | while read ip; do sed -i "\|$ip|d" as_cidr.txt; done
-          cat sg_cidr.txt | while read ip; do sed -i "\|$ip|d" as_cidr.txt; done
-          n=`grep -r -a ',EU,' GeoLite2-Country-Locations-zh-CN.csv | awk -F ',' '{print $1}'`
-          cat GeoLite2-Country-Blocks-IPv4.csv | awk -F ',' '{ $3=null;print $0}' | grep "$n" | awk -F ' ' '{print $1}' > eu_cidr.txt
-          cat it_cidr.txt | while read ip; do sed -i "\|$ip|d" eu_cidr.txt; done
-          cat ru_cidr.txt | while read ip; do sed -i "\|$ip|d" eu_cidr.txt; done
-          cat gb_cidr.txt | while read ip; do sed -i "\|$ip|d" eu_cidr.txt; done
-          cat fr_cidr.txt | while read ip; do sed -i "\|$ip|d" eu_cidr.txt; done
-          cat nl_cidr.txt | while read ip; do sed -i "\|$ip|d" eu_cidr.txt; done
-          cat se_cidr.txt | while read ip; do sed -i "\|$ip|d" eu_cidr.txt; done
-          cat es_cidr.txt | while read ip; do sed -i "\|$ip|d" eu_cidr.txt; done
-          cat de_cidr.txt | while read ip; do sed -i "\|$ip|d" eu_cidr.txt; done
-          n=`grep -r -a ',OC,' GeoLite2-Country-Locations-zh-CN.csv | awk -F ',' '{print $1}'`
-          cat GeoLite2-Country-Blocks-IPv4.csv | awk -F ',' '{ $3=null;print $0}' | grep "$n" | awk -F ' ' '{print $1}' > oc_cidr.txt
-          n=`grep -r -a ',AF,' GeoLite2-Country-Locations-zh-CN.csv | awk -F ',' '{print $1}'`
-          cat GeoLite2-Country-Blocks-IPv4.csv | awk -F ',' '{ $3=null;print $0}' | grep "$n" | awk -F ' ' '{print $1}' > af_cidr.txt
-          n=`grep -r -a ',SA,' GeoLite2-Country-Locations-zh-CN.csv | awk -F ',' '{print $1}'`
-          cat GeoLite2-Country-Blocks-IPv4.csv | awk -F ',' '{ $3=null;print $0}' | grep "$n" | awk -F ' ' '{print $1}' > sa_cidr.txt
-          n=`grep -r -a ',NA,' GeoLite2-Country-Locations-zh-CN.csv | awk -F ',' '{print $1}'`
-          cat GeoLite2-Country-Blocks-IPv4.csv | awk -F ',' '{ $3=null;print $0}' | grep "$n" | awk -F ' ' '{print $1}' > na_cidr.txt
-          cat us_cidr.txt | while read ip; do sed -i "\|$ip|d" na_cidr.txt; done
+          awk -F ',' 'NR==FNR && $0 ~ /,IT,/ {id=$1; next} NR!=FNR && $0 ~ id {split($1, arr, "/"); print arr[1]}' GeoLite2-Country-Locations-zh-CN.csv GeoLite2-Country-Blocks-IPv4.csv > it_cidr.txt
+          awk -F ',' 'NR==FNR && $0 ~ /,US,/ {id=$1; next} NR!=FNR && $0 ~ id {split($1, arr, "/"); print arr[1]}' GeoLite2-Country-Locations-zh-CN.csv GeoLite2-Country-Blocks-IPv4.csv > us_cidr.txt
+          awk -F ',' 'NR==FNR && $0 ~ /,JP,/ {id=$1; next} NR!=FNR && $0 ~ id {split($1, arr, "/"); print arr[1]}' GeoLite2-Country-Locations-zh-CN.csv GeoLite2-Country-Blocks-IPv4.csv > jp_cidr.txt
+          awk -F ',' 'NR==FNR && $0 ~ /,TW,/ {id=$1; next} NR!=FNR && $0 ~ id {split($1, arr, "/"); print arr[1]}' GeoLite2-Country-Locations-zh-CN.csv GeoLite2-Country-Blocks-IPv4.csv > tw_cidr.txt
+          awk -F ',' 'NR==FNR && $0 ~ /,HK,/ {id=$1; next} NR!=FNR && $0 ~ id {split($1, arr, "/"); print arr[1]}' GeoLite2-Country-Locations-zh-CN.csv GeoLite2-Country-Blocks-IPv4.csv > hk_cidr.txt
+          awk -F ',' 'NR==FNR && $0 ~ /,SG,/ {id=$1; next} NR!=FNR && $0 ~ id {split($1, arr, "/"); print arr[1]}' GeoLite2-Country-Locations-zh-CN.csv GeoLite2-Country-Blocks-IPv4.csv > sg_cidr.txt
+          awk -F ',' 'NR==FNR && $0 ~ /,KR,/ {id=$1; next} NR!=FNR && $0 ~ id {split($1, arr, "/"); print arr[1]}' GeoLite2-Country-Locations-zh-CN.csv GeoLite2-Country-Blocks-IPv4.csv > kr_cidr.txt
+          awk -F ',' 'NR==FNR && $0 ~ /,RU,/ {id=$1; next} NR!=FNR && $0 ~ id {split($1, arr, "/"); print arr[1]}' GeoLite2-Country-Locations-zh-CN.csv GeoLite2-Country-Blocks-IPv4.csv > ru_cidr.txt
+          awk -F ',' 'NR==FNR && $0 ~ /,GB,/ {id=$1; next} NR!=FNR && $0 ~ id {split($1, arr, "/"); print arr[1]}' GeoLite2-Country-Locations-zh-CN.csv GeoLite2-Country-Blocks-IPv4.csv > gb_cidr.txt
+          awk -F ',' 'NR==FNR && $0 ~ /,FR,/ {id=$1; next} NR!=FNR && $0 ~ id {split($1, arr, "/"); print arr[1]}' GeoLite2-Country-Locations-zh-CN.csv GeoLite2-Country-Blocks-IPv4.csv > fr_cidr.txt
+          awk -F ',' 'NR==FNR && $0 ~ /,DE,/ {id=$1; next} NR!=FNR && $0 ~ id {split($1, arr, "/"); print arr[1]}' GeoLite2-Country-Locations-zh-CN.csv GeoLite2-Country-Blocks-IPv4.csv > de_cidr.txt
+          awk -F ',' 'NR==FNR && $0 ~ /,SE,/ {id=$1; next} NR!=FNR && $0 ~ id {split($1, arr, "/"); print arr[1]}' GeoLite2-Country-Locations-zh-CN.csv GeoLite2-Country-Blocks-IPv4.csv > se_cidr.txt
+          awk -F ',' 'NR==FNR && $0 ~ /,ES,/ {id=$1; next} NR!=FNR && $0 ~ id {split($1, arr, "/"); print arr[1]}' GeoLite2-Country-Locations-zh-CN.csv GeoLite2-Country-Blocks-IPv4.csv > es_cidr.txt
+          awk -F ',' 'NR==FNR && $0 ~ /,NL,/ {id=$1; next} NR!=FNR && $0 ~ id {split($1, arr, "/"); print arr[1]}' GeoLite2-Country-Locations-zh-CN.csv GeoLite2-Country-Blocks-IPv4.csv > nl_cidr.txt
+          awk -F ',' 'NR==FNR && $0 ~ /,AS,/ {id=$1; next} NR!=FNR && $0 ~ id {split($1, arr, "/"); print arr[1]}' GeoLite2-Country-Locations-zh-CN.csv GeoLite2-Country-Blocks-IPv4.csv > as_cidr.txt
+          cat cn_cidr.txt jp_cidr.txt tw_cidr.txt hk_cidr.txt kr_cidr.txt sg_cidr.txt > combined_cidrs.txt
+          grep -v -F -f combined_cidrs.txt as_cidr.txt > as_cidr_filtered.txt
+          mv as_cidr_filtered.txt as_cidr.txt
+          rm combined_cidrs.txt
+          awk -F ',' 'NR==FNR && $0 ~ /,EU,/ {id=$1; next} NR!=FNR && $0 ~ id {split($1, arr, "/"); print arr[1]}' GeoLite2-Country-Locations-zh-CN.csv GeoLite2-Country-Blocks-IPv4.csv > eu_cidr.txt
+          cat it_cidr.txt ru_cidr.txt gb_cidr.txt fr_cidr.txt nl_cidr.txt se_cidr.txt es_cidr.txt de_cidr.txt > combined_cidrs.txt
+          grep -v -F -f combined_cidrs.txt eu_cidr.txt > eu_cidr_filtered.txt
+          mv eu_cidr_filtered.txt eu_cidr.txt
+          rm combined_cidrs.txt
+          awk -F ',' 'NR==FNR && $0 ~ /,OC,/ {id=$1; next} NR!=FNR && $0 ~ id {split($1, arr, "/"); print arr[1]}' GeoLite2-Country-Locations-zh-CN.csv GeoLite2-Country-Blocks-IPv4.csv > oc_cidr.txt
+          awk -F ',' 'NR==FNR && $0 ~ /,AF,/ {id=$1; next} NR!=FNR && $0 ~ id {split($1, arr, "/"); print arr[1]}' GeoLite2-Country-Locations-zh-CN.csv GeoLite2-Country-Blocks-IPv4.csv > af_cidr.txt
+          awk -F ',' 'NR==FNR && $0 ~ /,SA,/ {id=$1; next} NR!=FNR && $0 ~ id {split($1, arr, "/"); print arr[1]}' GeoLite2-Country-Locations-zh-CN.csv GeoLite2-Country-Blocks-IPv4.csv > sa_cidr.txt
+          awk -F ',' 'NR==FNR && $0 ~ /,NA,/ {id=$1; next} NR!=FNR && $0 ~ id {split($1, arr, "/"); print arr[1]}' GeoLite2-Country-Locations-zh-CN.csv GeoLite2-Country-Blocks-IPv4.csv > na_cidr.txt
+          grep -v -F -f us_cidr.txt na_cidr.txt > na_cidr_filtered.txt
+          mv na_cidr_filtered.txt na_cidr.txt
           mkdir ../cidrs
           mv *_cidr.txt ../cidrs/
           cd ../cidrs
