--- a/.github/workflows/media-resolvers.yml
+++ b/.github/workflows/media-resolvers.yml
@@ -15,7 +15,7 @@ jobs:
       - name: install pyinstaller
         shell: cmd
         run: |
-          pip install pyinstaller
+          pip install pyinstaller m3u8
 
       - name: Set up Release Date
         run: echo "RELEASE_DATE=v$(Get-Date -Format "yyyy.MM.dd")" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
