--- a/.github/workflows/notepad2.yml
+++ b/.github/workflows/notepad2.yml
@@ -95,14 +95,21 @@ jobs:
           copy cmake-build\metapath.exe bin\
           cd ..
           
-      - name: copy libmmd.dll
+      - name: copy oneAPI redist
         if: matrix.toolset == 'icx'
         shell: cmd
         run: |
           for /f "tokens=* usebackq" %%f in (`dir /b "C:\Program Files (x86)\Intel\oneAPI\compiler\" ^| findstr /V latest ^| sort`) do @set "LATEST_VERSION=%%f"
           echo %LATEST_VERSION%        
           copy /y "C:\Program Files (x86)\Intel\oneAPI\compiler\%LATEST_VERSION%\bin\libmmd.dll" bin\
+          copy /y "C:\Program Files (x86)\Intel\oneAPI\compiler\%LATEST_VERSION%\bin\lib*omp*.dll" bin\
           
+      - name: copy clang-cl redist
+        if: matrix.toolset == 'clang-cl'
+        shell: cmd
+        run: |
+          copy /y "%CD%\llvm\bin\lib*omp*.dll" bin\
+
       - name: upload executable artifact
         uses: actions/upload-artifact@v1
         with:
@@ -169,6 +176,7 @@ jobs:
           copy notepad2\CMakeLists.txt notepad2-src\
           cd notepad2-src
           git apply ..\notepad2\mingw.patch
+          git apply ..\notepad2\notepad2.patch
                     
       - name: build
         shell: msys2 {0}
